--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
               <a href="#">CONTACT</a>
             </li>
             <li>
-              <a href="" class="more">MORE <i class="fa-solid fa-angle-down"></i></a>
-             <div class="dropdown-content">
-                <a href="events.html" target="_blank">Events</a>
-                <a href="#">Our Students</a>
-                <a href="#" class="no-border">Account</a>
-              </div>
+              <a href="#" class="more">MORE <i class="fa-solid fa-angle-down"></i></a>
+            <div class="dropdown-content">
+              <a href="events.html" target="_blank">Events</a>
+              <a href="#">Our Students</a>
+              <a href="#" class="no-border">Account</a>
+            </div>
             </li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
       <div class="header_text">
-        <h1>SOS Hermann Gmeiner School Tamale</h1>
+        <h1>SOS Hermann Gmeiner<br> School <span>Tamale</span></h1>
         <p>Meet the School that excels in basically everything!</p>
         <a href="login.html" class="btn" target="_blank">Sign In</a>
       </div>
@@ -240,7 +240,7 @@
          <a href="#" class="sub-btn">Subcribe Now</a>
          </div>
          <figure>
-           <img src="mail.png">
+           <img src="https://unsplash.it/300/300">
          </figure>
        </div>
       </section>
@@ -263,7 +263,7 @@
           </ul>
         </div>
         <div class="footer_copyright">
-          <p>copyright &copy; 2022. Designed By <span>Alexander Afoko and Emmanuel Opoku</span></p>
+          <p>copyright &copy; 2023. Designed By <span>Alexander Afoko and Emmanuel Opoku</span></p>
         </div>
       </section>
 
